# ShieldGentsAI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  notify-telegram-on-pr.yml
docs/: LOGO_USAGE.md  NEW_SHIELDS_SUMMARY.md  PROJECT_SUMMARY.md  RELEASE_NOTES_v0.2.0.md  REPOSITORY_STRUCTURE.md  SECURITY_COVERAGE.md  logo.txt
docs/architecture/: ARCHITECTURE.md
docs/articles/: shieldgents-medium-article.md
docs/guides/: DASHBOARD.md  MCP_SECURITY_GUIDE.md  QUICK_START.md
examples/: README.md  advanced_security_demo.py  agent_examples.ipynb  basic_usage.py  behavioral_security_demo.py  dashboard_with_agent.py  langchain_agentshield_demo.py  langchain_integration.py  mcp_security_demo.py  mcp_server_builder_demo.py  monitor_real_agent.py  run_dashboard.py  strands_sdk_integration.py  web_scraping_security_demo.py  welcome.py
examples/scripts/: run_demo_dashboard.sh
src/shieldgents/: __init__.py
src/shieldgents/assets/: __init__.py  logo.txt
src/shieldgents/controls/: __init__.py  access.py  adversarial_detection.py  content_safety.py  data_poisoning.py  exfiltration.py  external_content.py  hallucination_detection.py  memory_privacy.py  model_drift.py  model_security.py  privilege.py  supply_chain.py  tool_chain.py
src/shieldgents/core/: __init__.py  behavior.py  context.py  monitor.py  prompts.py  sandbox.py
src/shieldgents/governance/: __init__.py  audit.py
src/shieldgents/integrations/: __init__.py  agent_shield.py  langchain.py  mcp_security.py  mcp_server_builder.py  multi_agent_security.py  production.py  strands.py  tool_chain.py
src/shieldgents/interface/: __init__.py  cli.py  dashboard.py
src/shieldgents/redteam/: __init__.py  covert_channel.py  exfiltration.py  vectors.py
tests/: __init__.py  conftest.py  test_adversarial_detection.py  test_agent_shield.py  test_agent_shield_langchain_integration.py  test_external_content.py  test_hallucination_detection.py  test_integration.py  test_model_drift.py  test_multi_agent_security.py  test_prompts.py  test_sandbox.py
